--- a/QuantumTechnicianApp/Src/AppProcessFlowScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/AppProcessFlowScreen.fx.yaml
@@ -177,6 +177,7 @@ AppProcessFlowScreen As screen:
             ZIndex: =3
 
             "glryAPFS As gallery.'BrowseLayout_Flexible_SocialFeed_ver5.0'":
+                '#CopilotOverlayLabel': ="Filtered"
                 DelayItemLoading: =true
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =Parent.Height-5
@@ -323,6 +324,7 @@ AppProcessFlowScreen As screen:
             ZIndex: =2
 
         "glryMenuAPFS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+            '#CopilotOverlayLabel': ="Filtered"
             BorderColor: =RGBA(255, 255, 255, 1)
             BorderThickness: =1
             Fill: =RGBA(237, 237, 237, 1)
