--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -204,6 +204,7 @@ FAQScreen As screen:
             ZIndex: =3
 
             "glryFAQS As gallery.'BrowseLayout_Flexible_SocialFeed_ver5.0'":
+                '#CopilotOverlayLabel': ="Filtered"
                 DelayItemLoading: =true
                 Height: =Parent.Height-25
                 Items: =FAQ
@@ -312,6 +313,7 @@ FAQScreen As screen:
             ZIndex: =2
 
         "glryMenuFAQS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+            '#CopilotOverlayLabel': ="Filtered"
             BorderColor: =RGBA(255, 255, 255, 1)
             BorderThickness: =1
             Fill: =RGBA(237, 237, 237, 1)
