--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -395,7 +395,7 @@ ScopeScreen As screen:
                     DataField: ="crd59_Scope"
                     Default: =ThisItem.PrimaryScopeofWorkLID
                     DisplayMode: =Parent.DisplayMode
-                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_PrimaryScopeofWorkLID")
+                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,shlrf_PrimaryScopeofWorkLID)
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =90
                     Required: =false
@@ -452,7 +452,7 @@ ScopeScreen As screen:
                         PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                         PressedFill: =RGBA(0, 0, 0, 1)
                         SearchFields: =["shlrf_primaryscopeofworkname"]
-                        SearchItems: =Search(Sort(GCPrimaryScopeofWorks,SortOrder.Ascending),CboxScope.SearchText,"shlrf_primaryscopeofworkname")
+                        SearchItems: =Search(Sort(GCPrimaryScopeofWorks,SortOrder.Ascending),CboxScope.SearchText,shlrf_primaryscopeofworkname)
                         SelectionFill: =RGBA(202, 202, 202, 1)
                         SelectMultiple: =false
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
@@ -468,7 +468,7 @@ ScopeScreen As screen:
                     DataField: ="crd59_ScopeOfWorkLID"
                     Default: =ThisItem.SecondaryScopeofWorkLID
                     DisplayMode: =Parent.DisplayMode
-                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_PrimaryScopeofWorkLID")
+                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,shlrf_PrimaryScopeofWorkLID)
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =100
                     Required: =false
@@ -521,7 +521,7 @@ ScopeScreen As screen:
                         SearchFields: =["shlrf_secondaryscopeofworkname"]
                         SearchItems: |-
                             =Search(//to show scope of work of selected scope
-                            Sort(Filter(GCSecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=CboxScope.Selected.'PrimaryScopeofWorkName '),'SecondaryScopeofWorkName ',SortOrder.Ascending),CboxScopeofwork.SearchText,"shlrf_secondaryscopeofworkname")
+                            Sort(Filter(GCSecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=CboxScope.Selected.'PrimaryScopeofWorkName '),'SecondaryScopeofWorkName ',SortOrder.Ascending),CboxScopeofwork.SearchText,shlrf_secondaryscopeofworkname)
                         SelectionFill: =RGBA(202, 202, 202, 1)
                         SelectMultiple: =false
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
@@ -556,10 +556,10 @@ ScopeScreen As screen:
                     DataField: ="crd59_manuallyscopeofwork"
                     Default: =ThisItem.CustomScopeofWork
                     DisplayMode: =Parent.DisplayMode
-                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_customscopeofwork")
+                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,shlrf_customscopeofwork)
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =120
-                    MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_customscopeofwork")
+                    MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,shlrf_customscopeofwork)
                     Required: =false
                     Update: =IntxtManuallyScopeofwork.Text
                     Width: =Parent.Width
@@ -796,6 +796,7 @@ ScopeScreen As screen:
             ZIndex: =2
 
         "glryMenuBarSS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+            '#CopilotOverlayLabel': ="Filtered"
             BorderColor: =RGBA(255, 255, 255, 1)
             BorderThickness: =1
             Fill: =RGBA(237, 237, 237, 1)
