--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -5,7 +5,7 @@
       "DataflowAnalysisEnabled": false,
       "DataflowAnalysisFlagStateToggledByUser": false
     },
-    "DocVersion": "1.339",
+    "DocVersion": "1.341",
     "MinVersionToLoad": "1.331",
     "MSAppStructureVersion": "2.0"
   },
@@ -22,6 +22,7 @@
       "blockmovingcontrol": true,
       "cdsdataformatting": false,
       "classiccontrols": false,
+      "commentgeneratedformulas": true,
       "consistentreturnschemafortabularfunctions": true,
       "copyandmerge": true,
       "dataflowanalysisenabled": false,
@@ -88,7 +89,7 @@
       "showclassicthemes": false,
       "smartemaildatacard": false,
       "sqlstoredprocedureenabled": false,
-      "supportcolumnnamesasidentifiers": false,
+      "supportcolumnnamesasidentifiers": true,
       "tabledoesntwraprecords": true,
       "usedisplaynamemetadata": true,
       "useenforcesavedatalimits": true,
